--- a/step2.html
+++ b/step2.html
@@ -141,7 +141,7 @@
                     <circle cx="12" cy="12" r="10"></circle>
                     <polyline points="12 6 12 12 16 14"></polyline>
                 </svg>
-                <span>2 minuti</span>
+                <span>2 minuti circa</span>
             </div>
         </header>
 
