--- a/step5.html
+++ b/step5.html
@@ -133,7 +133,7 @@
                     <circle cx="12" cy="12" r="10"></circle>
                     <polyline points="12 6 12 12 16 14"></polyline>
                 </svg>
-                <span>30 secondi</span>
+                <span>30 secondi circa</span>
             </div>
         </header>
 
