--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <main class="main-container">
         <header class="header-row">
-            <h1 class="title">Benvenuto</h1>
+            <h1 class="title">Benvenuti!</h1>
         </header>
 
         <section class="content">
