--- a/step10.html
+++ b/step10.html
@@ -138,7 +138,7 @@
         </header>
 
         <section class="content">
-             <p>Ultimo compito! Ricordi il bottone che avevi immaginato prima  scaricare il PDF del menù di un ristorante dalla sua pagina web?</p>
+             <p>Ultimo compito! Ricordi il bottone che avevi immaginato prima per scaricare il PDF del menù di un ristorante dalla sua pagina web?</p>
 <p> Consulta lo strumento <a href="https://elenapoll.github.io/easywcag/" target="_blank">EasyWCAG</a> per verificare se ci sono delle indicazioni pertinenti alla <strong> progettazione di un bottone accessibile </strong>, di tua competenza, che non hai tenuto in considerazione fino ad ora.</p>
             <p>Quando avrai completato il compito, torna qui per procedere con l'ultimo passaggio del test.</p>
         </section>
