--- a/step3.html
+++ b/step3.html
@@ -157,8 +157,8 @@
         </header>
 
         <section class="content">
-            <p>Adesso è il tuo turno! Dai un’occhiata alla palette colori qui sotto e prova a valutarne l’accessibilità.</p>
-            <p>Ti chiedo di fare riferimento unicamente al testo delle <a href="https://www.w3.org/WAI/standards-guidelines/wcag/" target="_blank">WCAG</a> come strumento di supporto per la tua analisi.</p>
+            <p>Adesso è il tuo turno! <strong> Dai un’occhiata alla palette colori qui sotto e prova a valutarne l’accessibilità.</strong></p>
+            <p>Ti chiedo di fare riferimento unicamente al testo delle <a href="https://www.w3.org/Translations/WCAG22-it/" target="_blank"> WCAG 2.2</a> come strumento di supporto per la tua analisi.</p>
             <p>Quando hai terminato, torna qui per proseguire con i passaggi successivi.</p>
 
             <p>Di seguito le informazioni importanti della palette, come puoi vedere nell’immagine sottostante:</p>
@@ -166,7 +166,7 @@
             <ul class="info-list">
                 <li>Titolo &rarr; 20 pt colore <span class="hex-code" title="Clicca per selezionare">#a87f8a</span> su sfondo <span class="hex-code" title="Clicca per selezionare">#ffffff</span></li>
                 <li>Didascalia &rarr; 12 pt colore <span class="hex-code" title="Clicca per selezionare">#ffffff</span> su sfondo <span class="hex-code" title="Clicca per selezionare">#a87f8a</span></li>
-                <li>Testo &rarr; 12 pt colore <span class="hex-code" title="Clicca per selezionare">#1b4371</span></li>
+                <li>Testo &rarr; 12 pt colore <span class="hex-code" title="Clicca per selezionare">#1b4371 </span> su sfondo <span class="hex-code" title="Clicca per selezionare">#ffffff</span></li>
             </ul>
 
             <div class="image-container">
