--- a/step8.html
+++ b/step8.html
@@ -161,7 +161,7 @@
 
         <section class="content">
             <p>Ottimo! Ora ti chiedo di <strong> provare a ripetere i task precedenti</strong>, utilizzando <a href="https://elenapoll.github.io/easywcag/" target="_blank">EasyWCAG</a> come strumento di supporto per la tua analisi.</p>
-            <p>Dai un’occhiata alla palette colori qui sotto e prova a valutarne l’accessibilità.</p>
+            <p><strong>Dai un’occhiata alla palette colori qui sotto e prova a valutarne l’accessibilità.</strong></p>
             <p>Quando hai terminato, torna qui per proseguire con i passaggi successivi.</p>
 
              <p>Di seguito le informazioni importanti della palette, come puoi vedere nell’immagine sottostante:</p>
@@ -169,7 +169,7 @@
             <ul class="info-list">
                 <li>Titolo &rarr; 20 pt colore <span class="hex-code" title="Clicca per selezionare">#a87f8a</span> su sfondo <span class="hex-code" title="Clicca per selezionare">#ffffff</span></li>
                 <li>Didascalia &rarr; 12 pt colore <span class="hex-code" title="Clicca per selezionare">#ffffff</span> su sfondo <span class="hex-code" title="Clicca per selezionare">#a87f8a</span></li>
-                <li>Testo &rarr; 12 pt colore <span class="hex-code" title="Clicca per selezionare">#1b4371</span></li>
+                <li>Testo &rarr; 12 pt colore <span class="hex-code" title="Clicca per selezionare">#1b4371 </span> su sfondo <span class="hex-code" title="Clicca per selezionare">#ffffff</span></li>
             </ul>
 
             <div class="image-container">
